--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* Master Styles */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
@@ -62,4 +63,7 @@ nav a.active {
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
+}
+.example-full-width {
+  width:50%;
 }
